creusot/tests/should_fail/impure_functions.stderr
warning: unused import: `std::*`
 --> impure_functions.rs:2:25
  |
2 | use creusot_contracts::{std::*, *};
  |                         ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[creusot]: called impure program function in logical context "std::vec::Vec::<T, A>::len"
 --> impure_functions.rs:6:20
  |
6 |     pearlite! { @v.len() }
  |                    ^^^

error: aborting due to previous error; 1 warning emitted

